Include DIO4 device

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -10,7 +10,8 @@ JAR = @JAR@
 RMIC = @RMIC@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
-DEVICES = TRCHSetup.java\
+DEVICES = DIO4Setup.java\
+TRCHSetup.java\
 ADC265Setup.java\
 E1463Setup.java\
 VMEWavesSetup.java\
