--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -110,7 +110,8 @@ RFXAxiControlSetup.java \
 RFXTorControlSetup.java \
 RFXAxiToroidalControlSetup.java \
 RFXMHDSetup.java \
-EDAM_CPCISetupV1Setup.java
+EDAM_CPCISetupV1Setup.java \
+MCAMERASetup.java
 
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
