Connection support in C++

--- a/mdsobjects/cpp/cpp.vcproj
+++ b/mdsobjects/cpp/cpp.vcproj
@@ -65,6 +65,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="false"
+				AdditionalOptions="..\..\win32\debug\mdsipshr.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				AssemblyDebug="0"
