Arred Reliable Event class REvent

--- a/mdsobjects/java/Makefile.in
+++ b/mdsobjects/java/Makefile.in
@@ -53,6 +53,7 @@ MDSplus/Procedure.java\
 MDSplus/Program.java\
 MDSplus/PutMany.java\
 MDSplus/Range.java\
+MDSplus/REvent.java\
 MDSplus/Routine.java\
 MDSplus/Scalar.java\
 MDSplus/Signal.java\
