--- a/math/Makefile.in
+++ b/math/Makefile.in
@@ -8,7 +8,7 @@ RM=$(top_srcdir)/devscripts/rm_if
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 INSTALL=@top_srcdir@/conf/install-sh -c
-FC=@F77@
+FC=/usr/bin/g77
 FFLAGS=@FFLAGS@
 LIBS=@LIBS@ @LIBM@
 
