only use g77 compiler for math

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,7 +43,7 @@ PARTS = \
         tcl \
         tdic \
         mdslib \
-        math \
+        @MATH@ \
         wfevent \
         setevent \
         mdsmisc \
