--- a/configure.in
+++ b/configure.in
@@ -737,7 +737,15 @@ if test $mdsplus_ok = no; then
 		 AC_DEFINE(NEED_SEMUN)
 fi
 AC_MSG_RESULT($mdsplus_ok)
-
+AC_MSG_CHECKING(for g77 for math lib)
+if ( which /usr/bin/g77 2>/dev/null )
+then
+  AC_MSG_RESULT(yes)
+  MATH="math"
+else
+  AC_MSG_RESULT(no, math library skipped)
+  MATH=""
+fi
 AC_MSG_CHECKING(for sigvec structure declaration)
 AC_TRY_COMPILE([#include <signal.h>],[struct sigvec arg;],
 							 mdsplus_ok=yes,mdsplus_ok=no)
@@ -933,6 +941,7 @@ AC_SUBST(MAKESHLIBDIR_RULE)
 AC_SUBST(MAKEUIDDIR)
 AC_SUBST(MAKEETCDIR)
 AC_SUBST(MAKEJAVADIR)
+AC_SUBST(MATH)
 AC_SUBST(MDSSQL)
 AC_SUBST(MDSTCPIP)
 AC_SUBST(MDSVME)
