--- a/idlmdsevent/idlmdsevent.vcproj
+++ b/idlmdsevent/idlmdsevent.vcproj
@@ -158,7 +158,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
+				AdditionalDependencies="&quot;$(IDL_DIR)\bin\bin.x86_64\idl.lib&quot;"
 				LinkIncremental="2"
 				ModuleDefinitionFile=".\idlmdsevent.def"
 				GenerateDebugInformation="true"
@@ -331,7 +331,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(IDL_DIR)\bin\bin.x86_64\idl.lib&quot;"
+				AdditionalDependencies="&quot;$(IDL_DIR)\bin\bin.x86_64\idl.lib&quot;"
 				LinkIncremental="1"
 				ModuleDefinitionFile=".\idlmdsevent.def"
 				ProgramDatabaseFile=""
