--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -246,7 +246,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="&quot;C:\Program Files\Java\jdk1.6.0_16\lib\jvm.lib&quot;"
+				AdditionalOptions="/MACHINE:I386"
+				AdditionalDependencies="&quot;$(JDK_DIR)\lib\jvm.lib&quot;"
 				ModuleDefinitionFile=".\javamds.def"
 				ProgramDatabaseFile=".\Release/javamds.pdb"
 				RandomizedBaseAddress="1"
@@ -331,7 +332,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot;"
+				AdditionalDependencies="&quot;C:\Program Files\Java\jdk1.6.0_16\lib\jvm.lib&quot;"
 				ModuleDefinitionFile=".\javamds.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/javamds.pdb"
