--- a/javatraverser/javatraverser.vcproj
+++ b/javatraverser/javatraverser.vcproj
@@ -21,7 +21,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\Release"
+			OutputDirectory="$(SolutionDir)java\classes\"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="0"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
@@ -32,31 +32,8 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javatraverser.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javatraverser.mak&quot; /a"
-				CleanCommandLine="del *.class ..\java\classes\jTraverser.jar"
-				Output="..\java\classes\jTraverser.jar"
-				PreprocessorDefinitions=""
-				IncludeSearchPath=""
-				ForcedIncludes=""
-				AssemblySearchPath=""
-				ForcedUsingAssemblies=""
-				CompileAsManaged=""
-			/>
-		</Configuration>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory=".\Debug"
-			IntermediateDirectory=".\Debug"
-			ConfigurationType="0"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			>
-			<Tool
-				Name="VCNMakeTool"
-				BuildCommandLine="nmake /f &quot;javatraverser.mak&quot;"
-				ReBuildCommandLine="nmake /f &quot;javatraverser.mak&quot; /a"
-				CleanCommandLine=""
-				Output="..\java\classes\MDSplus.jar"
+				CleanCommandLine="del *.class &quot;$(OutDir)jTraverser.jar&quot; &quot;$(OutDir)DeviceBeans.jar&quot;"
+				Output="&quot;$(OutDir)jTraverser.jar&quot;"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
 				ForcedIncludes=""
@@ -67,7 +44,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$SolutionDir)java\classes"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="0"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
@@ -78,8 +55,31 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javatraverser.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javatraverser.mak&quot; /a"
-				CleanCommandLine="del *.class ..\java\classes\jTraverser.jar"
-				Output="..\java\classes\jTraverser.jar"
+				CleanCommandLine="del *.class $(OutDir)jTraverser.jar $($OutDir)DeviceBeans.jar"
+				Output="$(SolutionDir)java\classes\jTraverser.jar $(SolutionDir)java\classes\DeviceBeans.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)java\classes\"
+			IntermediateDirectory=".\Debug"
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCNMakeTool"
+				BuildCommandLine="nmake /f &quot;javatraverser.mak&quot;"
+				ReBuildCommandLine="nmake /f &quot;javatraverser.mak&quot; /a"
+				CleanCommandLine="del *.class &quot;$(OutDir)jTraverser.jar&quot; &quot;$(OutDir)DeviceBeans.jar&quot;"
+				Output="&quot;$(OutDir)jTraverser.jar&quot;"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
 				ForcedIncludes=""
@@ -90,7 +90,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$SolutionDir)java\classes"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="0"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
@@ -101,8 +101,8 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javatraverser.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javatraverser.mak&quot; /a"
-				CleanCommandLine=""
-				Output="..\java\classes\MDSplus.jar"
+				CleanCommandLine="del *.class $(OutDir)jTraverser.jar $($OutDir)DeviceBeans.jar"
+				Output="$(SolutionDir)java\classes\jTraverser.jar $(SolutionDir)java\classes\DeviceBeans.jar"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
 				ForcedIncludes=""
@@ -409,6 +409,10 @@
 			</File>
 			<File
 				RelativePath=".\LabeledExprEditor.java"
+				>
+			</File>
+			<File
+				RelativePath=".\manifest.mf"
 				>
 			</File>
 			<File
