--- a/matlab/matlab.vcproj
+++ b/matlab/matlab.vcproj
@@ -51,7 +51,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="$(MATLAB_DIR)\extern\include,..\include"
+				AdditionalIncludeDirectories="&quot;$(MATLAB_DIR)\extern\include&quot;,..\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;MATLAB_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -76,7 +76,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib $(MATLAB_DIR)\extern\lib\win32\microsoft\msvc60\libmex.lib $(MATLAB_DIR)\extern\lib\win32\microsoft\msvc60\libmx.lib"
+				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib &quot;$(MATLAB_DIR)\extern\lib\win32\microsoft\libmex.lib&quot; &quot;$(MATLAB_DIR)\extern\lib\win32\microsoft\libmx.lib&quot;"
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -164,7 +164,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib &quot;C:\Program Files\MATLAB\R2008a\extern\lib\win64\microsoft\libmex.lib&quot; &quot;C:\Program Files\MATLAB\R2008a\extern\lib\win64\microsoft\libmx.lib&quot;"
+				AdditionalDependencies="wsock32.lib &quot;$(MATLAB_DIR)\extern\lib\win64\microsoft\libmex.lib&quot; &quot;$(MATLAB_DIR)\extern\lib\win64\microsoft\libmx.lib&quot;"
 				OutputFile="$(OutDir)/mdsipmex.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
