--- a/javascope/jScope.template
+++ b/javascope/jScope.template
@@ -14,7 +14,7 @@ then
 else
   lib=lib
 fi
-env \
+exec env \
 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$MDSPLUS_DIR/${lib} \
 SHLIB_PATH=$SHLIB_PATH:$MDSPLUS_DIR/${lib} \
 DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$MDSPLUS_DIR/${lib} \
