--- a/Makefile.in
+++ b/Makefile.in
@@ -43,7 +43,7 @@ PARTS = \
         tcl \
         @TDIC@ \
         mdslib \
-        @MATH@ \
+        math \
         wfevent \
         setevent \
         mdsmisc \
