--- a/math/Makefile.in
+++ b/math/Makefile.in
@@ -49,7 +49,7 @@ SOURCES = \
 	zgeco.f  \
 	zmul.f
 
-OBJECTS = $(SOURCES:.f=.o) boxsmooth.o
+OBJECTS = $(SOURCES:.f=.o) boxsmooth.o iw9get.o
 EXPORTS = MdsMath.export
 
 all: @MAKESHLIBDIR@ @MAKESHLIBDIR@libMdsMath@SHARETYPE@ 
