remove cts objects during clean

--- a/camshr/Makefile.in
+++ b/camshr/Makefile.in
@@ -63,7 +63,7 @@ all : @MAKESHLIBDIR@ @MAKESHLIBDIR@lib$(LIBRARYNAME)@SHARETYPE@ \
 
 .PHONY: clean
 clean:
-	@ $(RM) $(OBJECTS)
+	@ $(RM) $(OBJECTS) $(CTS_OBJECTS)
 	@ $(RM) @MAKESHLIBDIR@lib$(LIBRARYNAME)@SHARETYPE@
 	@ $(RM) @MAKESHLIBDIR@lib$(LIBRARYNAME)@SHARETYPE@.$(MAJOR)
 	@ $(RM) @MAKESHLIBDIR@lib$(LIBRARYNAME)@SHARETYPE@.$(MAJOR).$(MINOR)
