--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -9,7 +9,13 @@ SCRIPTS = \
         @MAKEBINDIR@remote_submit \
 	@MAKEBINDIR@unix_submit \
 	@MAKEBINDIR@synchronize_unix \
-	@MAKEBINDIR@SetMdsplusFileProtection
+	@MAKEBINDIR@SetMdsplusFileProtection \
+        @MAKEBINDIR@job_finish \
+        @MAKEBINDIR@job_functions \
+        @MAKEBINDIR@job_output \
+        @MAKEBINDIR@job_que \
+        @MAKEBINDIR@job_start 
+
 
 all : @MAKEBINDIR@ \
 	$(SCRIPTS)
@@ -36,3 +42,23 @@ install:
 
 @MAKEBINDIR@ :
 	mkdir @MAKEBINDIR@
+
+@MAKEBINDIR@remote_submit : remote_submit
+        cp remote_submit @MAKEBINDIR@remote_submit
+
+@MAKEBINDIR@job_finish : job_finish
+        cp  job_finish @MAKEBINDIR@job_finish
+
+@MAKEBINDIR@job_functions : job_functions
+        cp  job_functions @MAKEBINDIR@job_functions
+
+@MAKEBINDIR@job_output : job_output
+        cp  job_output @MAKEBINDIR@job_output
+
+@MAKEBINDIR@job_queue : job_queue
+        cp  job_queue @MAKEBINDIR@job_queue
+
+@MAKEBINDIR@job_start : job_start
+        cp  job_start @MAKEBINDIR@job_start
+
+
