--- a/configure.in
+++ b/configure.in
@@ -807,9 +807,15 @@ if test $mdsplus_ok = yes; then
 fi
 
 dnl Check for Sybase
-AC_MSG_CHECKING(for SYBASE open/client)
+AC_MSG_CHECKING(for SYBASE open/client or freetds)
 : ${SYBASE=/usr/local/sybase}
-if test -r "$SYBASE/lib${SYB64}/libsybdb.a" 
+if test -r "/usr/lib${SYB64}/libsybdb.so"
+then
+        SYBASE_INC="-DSYBASE"
+        SYBASE_LIB="-lsybdb"
+        SYBASE="SYBASE"
+        AC_MSG_RESULT(have freetds)
+elif test -r "$SYBASE/lib${SYB64}/libsybdb.a" 
 then 
         SYBASE_INC="-I$SYBASE/include -DSYBASE"
         SYBASE_LIB="-L$SYBASE/lib${SYB64} $LD_LDARC -lsybdb $LD_LDSHARE"
