--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -116,7 +116,8 @@ HMSPECTROSetup.java \
 RFXDiagTimesSetup.java \
 RFXDiagTimesV1Setup.java \
 MHD_BR_TESTSetup.java\
-EDA3VmeConfigAdd.java
+EDA3VmeConfigAdd.java\
+MCUSetup.java
 
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
