add SIS3820 setup

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -117,7 +117,8 @@ RFXDiagTimesSetup.java \
 RFXDiagTimesV1Setup.java \
 MHD_BR_TESTSetup.java\
 EDA3VmeConfigSetup.java\
-MCUSetup.java
+MCUSetup.java\
+SIS3820Setup.java
 
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
