add FEMTO GUI setup device

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -118,7 +118,8 @@ RFXDiagTimesV1Setup.java \
 MHD_BR_TESTSetup.java\
 EDA3VmeConfigSetup.java\
 MCUSetup.java\
-SIS3820Setup.java
+SIS3820Setup.java\
+FEMTOSetup.java
 
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
